# meet-py

./: README.md  main.py  pyproject.toml
db/: ds.py  test.py
fastweb/: .env.test  main.py  readme.md
fastweb/api/: env_api.py  error.py  items_api.py  users_api.py
fastweb/config/: env.py
fastweb/error/: exception.py
fastweb/globals/: var.py
fastweb/log/: logger.py
fastweb/middleware/: BaseRequestMiddleware.py
fastweb/model/: item_model.py
mcp/: demo.py
python100/: data.json  day02.py  day03.py  day04.py  day05.py  day06.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day30.py  file.txt  module1.py  module2.py  test.py
spider/: bqka.py  weather_detail.py  yanxuan.py
test/: netStats.py  test.py  test2.py
