[project]
name = "meet-py"
version = "0.1.0"
description = "meet with python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]
